# wavebox

./: .flaskenv  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  contracts.py  main.py  pyproject.toml  requirements.txt
app/: headers.py  main.py  requests.py  responses.py
app/controllers/: foobar_controller.py
app/middlewares/: foobar_middleware.py
app/models/: requests.py
app/routers/: routers.py
app/services/: foobar_service.py
components/: __init__.py  controllers.py  exceptions.py  interceptors.py  middlewares.py  routes.py  services.py
definitions/: applications.py
example_app/: app.py  routes.py
example_app/controllers/foo_api/: foo_api_service.py
routes/: routes.py
structure/: application.py  controllers.py  group.py  groups.py  middleware.py  middlewares.py  routes.py  routes_manager.py  services.py
structure/extensions/: routes_extension.py
structure/tools/: request_header.py
troubles/: exceptions.py
wavebox/components/: __init__.py  controllers.py  middlewares.py  routes.py  services.py
wavebox/definitions/: applications.py
wavebox/utilities/: modifiers.py
